fix 1 content img on mobile

--- a/src/components/Content1/FirstContent.module.scss
+++ b/src/components/Content1/FirstContent.module.scss
@@ -160,7 +160,7 @@
     }
     .ContentImg {
         width: 100%;
-        height: 250px;
+        height: 280px;
         max-width: 753px;
         z-index: 4;
         flex-shrink: 0;
